@@ -1,11 +1,7 @@
 package com.suriname.product.service;
 
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.Workbook;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-
+import org.apache.poi.ss.usermodel.*;
+import org.apache.poi.ss.usermodel.WorkbookFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -19,6 +15,7 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 import java.io.InputStream;
+import java.io.IOException;
 import java.util.*;
 
 @Service
@@ -28,30 +25,35 @@ public class ProductExcelService {
 
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
+    private static final DataFormatter FMT = new DataFormatter();
 
-    public ResponseEntity<?> importFromExcel(MultipartFile file) {
+    public ResponseEntity<?> importFromExcel(MultipartFile file) throws IOException {
         List<Map<String, String>> failures = new ArrayList<>();
         int successCount = 0;
+        int totalCount = 0;
 
-        try (InputStream is = file.getInputStream(); Workbook workbook = new XSSFWorkbook(is)) {
+        try (InputStream is = file.getInputStream();
+             Workbook workbook = WorkbookFactory.create(is)) { 
             Sheet sheet = workbook.getSheetAt(0);
 
-            for (int i = 1; i < sheet.getPhysicalNumberOfRows(); i++) {
-                Row row = sheet.getRow(i);
+            final int START_ROW = 1; 
+            for (int r = START_ROW; r <= sheet.getLastRowNum(); r++) {
+                Row row = sheet.getRow(r);
                 if (row == null || isRowEmpty(row)) continue;
 
+                totalCount++; 
+
                 try {
-                    String productBrand = getCellValue(row.getCell(0));  
-                    String categoryName = getCellValue(row.getCell(1));       
-                    String productName = getCellValue(row.getCell(2));        
-                    String modelCode = getCellValue(row.getCell(3));          
-                    String memo = getCellValue(row.getCell(4));
+                    String productBrand = getCellValue(row, 0); // 제조사
+                    String categoryName = getCellValue(row, 1); // 제품분류
+                    String productName  = getCellValue(row, 2); // 제품명
+                    String modelCode    = getCellValue(row, 3); // 모델코드
+                    String memo         = getCellValue(row, 4); // 비고
 
                     if (categoryName.isBlank() || productName.isBlank()) {
                         throw new IllegalArgumentException("카테고리명과 제품명은 필수입니다.");
                     }
 
-                    // 카테고리 존재 여부 확인
                     Category category = categoryRepository.findByName(categoryName)
                         .orElseGet(() -> categoryRepository.saveAndFlush(
                             Category.builder()
@@ -61,7 +63,6 @@ public class ProductExcelService {
                                     .build()
                         ));
 
-                    // 제품 등록
                     Product product = Product.builder()
                             .category(category)
                             .productName(productName)
@@ -76,36 +77,39 @@ public class ProductExcelService {
                     successCount++;
 
                 } catch (Exception e) {
-                    Map<String, String> fail = new HashMap<>();
-                    fail.put("row", String.valueOf(i + 1));
-                    fail.put("reason", e.getMessage());
-                    failures.add(fail);
+                    failures.add(Map.of(
+                        "row", String.valueOf(r + 1),           
+                        "reason", e.getMessage() != null ? e.getMessage() : "알 수 없는 오류"
+                    ));
                 }
             }
-
-            return ResponseEntity.ok(Map.of(
-                "status", 200,
-                "message", failures.isEmpty() ? "제품 등록 성공" : "일부 제품 등록 실패",
-                "data", Map.of(
-                    "successCount", successCount,
-                    "failures", failures
-                )
-            ));
-
-        } catch (Exception e) {
-            throw new RuntimeException("엑셀 업로드 실패: " + e.getMessage(), e);
         }
+
+        int failureCount = failures.size();
+
+        return ResponseEntity.ok(Map.of(
+            "status", 200,
+            "message", failureCount == 0 ? "제품 등록 성공" : "일부 제품 등록 실패",
+            "data", Map.of(
+                "totalCount", totalCount,     
+                "successCount", successCount,   
+                "failureCount", failureCount,  
+                "failures", failures    
+            )
+        ));
     }
 
-    private String getCellValue(Cell cell) {
-        return cell == null ? "" : cell.toString().trim();
+    private String getCellValue(Row row, int idx) {
+        if (row == null || idx < 0 || idx >= row.getLastCellNum()) return "";
+        Cell cell = row.getCell(idx);
+        return cell == null ? "" : FMT.formatCellValue(cell).trim();
     }
 
     private boolean isRowEmpty(Row row) {
+        if (row == null) return true;
         for (int i = 0; i < row.getLastCellNum(); i++) {
-            if (row.getCell(i) != null && !getCellValue(row.getCell(i)).isBlank()) {
-                return false;
-            }
+            Cell cell = row.getCell(i);
+            if (cell != null && !FMT.formatCellValue(cell).trim().isEmpty()) return false;
         }
         return true;
     }
